--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-virtual": "^3.13.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/lodash": "^4.17.17",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-rnd": "^7.4.4",
