--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "export-ts": "cargo run --manifest-path src-tauri/Cargo.toml -- export-ts"
   },
   "dependencies": {
     "@fluentui/react-components": "^9.64.1",
