--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-virtual": "^3.13.10",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
+    "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
