--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,4 +26,5 @@ ts-rs = "10.1"
 rayon = "1.10.0"
 schemars = "1.0.3"
 jsonschema = "0.30.0"
+duckdb = { version = "1.3.1", features = ["bundled"] }
 
