--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = [ "plugin-macros","tauri-app/src-tauri"]
+members = [ "plugin-core", "plugin-macros","tauri-app/src-tauri"]
