--- a/plugin-macros/Cargo.toml
+++ b/plugin-macros/Cargo.toml
@@ -9,4 +9,5 @@ proc-macro = true
 [dependencies]
 proc-macro2 = "1.0.95"
 quote = "1.0.40"
-syn = {version = "2.0.104", features = ["full"] }
+syn = {version = "2.0.104", features = ["full"]}
+"plugin-core" = {path = "../plugin-core"}
