--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -14,7 +14,8 @@
     "@fluentui/react-components": "^9.64.1",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
-    "@tauri-apps/api": "^2",
+    "@tauri-apps/api": "^2.6.0",
+    "@tauri-apps/plugin-dialog": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "lit": "^3.3.0",
