--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -23,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-rnd": "^10.5.2"
+    "react-rnd": "^10.5.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
