--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
 [workspace]
 resolver = "2"
-members = [ "plugin-core", "plugin-macros","tauri-app/src-tauri"]
+members = [ "plugin-core", "plugin-macros", "sql-tool","tauri-app/src-tauri"]
+
+[workspace.dependencies]
+duckdb = { version = "1.3.1", features = ["bundled"] }
+polars = "0.49.1"
