--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -28,7 +28,7 @@ ts-rs = "10.1"
 rayon = "1.10.0"
 schemars = "1.0.3"
 jsonschema = "0.30.0"
-duckdb = { version = "1.3.1", features = ["bundled"] }
+duckdb = { workspace = true, features = ["bundled"] }
 zip = "4.2.0"
 tempfile = "3.20.0"
 uuid = { version = "1", features = ["v4"] }
