--- a/sql-tool/Cargo.toml
+++ b/sql-tool/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-duckdb = { workspace = true, features = ["bundled"] }
-polars = { workspace = true }
+duckdb = { workspace = true }
