--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,6 @@ members = [ "plugin-core", "plugin-macros", "sql-tool","tauri-app/src-tauri"]
 
 [workspace.dependencies]
 duckdb = { version = "1.3.1", features = ["bundled", "polars"] }
+rayon = "1.10.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
