--- a/sql-tool/Cargo.toml
+++ b/sql-tool/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 duckdb = { workspace = true }
+rayon = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
