--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -22,10 +22,10 @@ plugin-core = { path = "../../plugin-core" }
 plugin-macros = { path = "../../plugin-macros" }
 tauri = { version = "2.5.1", features = [] }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+serde = { workspace = true }
+serde_json = { workspace = true }
 ts-rs = "10.1"
-rayon = "1.10.0"
+rayon = { workspace = true }
 schemars = "1.0.3"
 jsonschema = "0.30.0"
 duckdb = { workspace = true, features = ["bundled"] }
