--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-rnd": "^10.5.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "wasmoon": "^1.16.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
