--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -18,6 +18,8 @@
     "@tauri-apps/plugin-dialog": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
+    "@tiptap/react": "^2.26.1",
+    "@tiptap/starter-kit": "^2.26.1",
     "lit": "^3.3.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
