要去了解 node 插入的規則

--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -11,7 +11,8 @@
     "export-ts": "cargo run --manifest-path src-tauri/Cargo.toml -- export-ts"
   },
   "dependencies": {
-    "@fluentui/react-components": "^9.64.1",
+    "@fluentui/react-components": "^9.66.7",
+    "@lexical/code": "^0.33.1",
     "@lexical/react": "^0.33.1",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
@@ -21,6 +22,7 @@
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "highlight.js": "^11.11.1",
     "lexical": "^0.33.1",
     "lit": "^3.3.0",
     "lodash": "^4.17.21",
