--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "@types/node": "^24.0.12"
+  },
+  "dependencies": {
+    "@lexical/link": "^0.33.1",
+    "@tauri-apps/plugin-shell": "^2.3.0"
   }
 }
