--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -23,6 +23,8 @@
     "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "@tiptap/react": "^2.26.1",
     "@tiptap/starter-kit": "^2.26.1",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "highlight.js": "^11.11.1",
     "lexical": "^0.33.1",
     "lit": "^3.3.0",
