--- a/sql-tool/Cargo.toml
+++ b/sql-tool/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arrow = "55.2.0"
 duckdb = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
