--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ duckdb = { version = "1.3.1", features = ["bundled", "polars"] }
 rayon = "1.10.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+arrow = "55.2.0"
+parquet = "55.2.0"
