--- a/sql-tool/Cargo.toml
+++ b/sql-tool/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-arrow = "55.2.0"
+arrow = { workspace = true }
+parquet = { workspace = true }
 duckdb = { workspace = true }
 rayon = { workspace = true }
 serde = { workspace = true }
