--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -25,6 +25,7 @@
     "@tiptap/starter-kit": "^2.26.1",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "apache-arrow": "^21.0.0",
     "highlight.js": "^11.11.1",
     "lexical": "^0.33.1",
     "lit": "^3.3.0",
