--- a/tauri-app/src-tauri/Cargo.toml
+++ b/tauri-app/src-tauri/Cargo.toml
@@ -34,4 +34,5 @@ zip = "4.2.0"
 tempfile = "3.20.0"
 uuid = { version = "1", features = ["v4"] }
 tauri-plugin-dialog = "2"
+arrow = { workspace = true }
 
