--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -30,6 +30,7 @@
     "lexical": "^0.33.1",
     "lit": "^3.3.0",
     "lodash": "^4.17.21",
+    "monaco": "^1.201704190613.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
