--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -15,6 +15,7 @@
     "@js-temporal/polyfill": "^0.5.1",
     "@lexical/code": "^0.33.1",
     "@lexical/react": "^0.33.1",
+    "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.10",
     "@tauri-apps/api": "^2.6.0",
@@ -30,10 +31,10 @@
     "lexical": "^0.33.1",
     "lit": "^3.3.0",
     "lodash": "^4.17.21",
-    "monaco": "^1.201704190613.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-resizable-panels": "^3.0.3",
     "react-rnd": "^10.5.2",
     "rxjs": "^7.8.2",
     "wasmoon": "^1.16.0"
