--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "plugin-core", "plugin-macros", "sql-tool","tauri-app/src-tauri"]
+members = [ "databox", "plugin-core", "plugin-macros", "sql-tool","tauri-app/src-tauri"]
 
 [workspace.dependencies]
 duckdb = { version = "1.3.1", features = ["bundled", "polars"] }
