--- a/tauri-app/package.json
+++ b/tauri-app/package.json
@@ -11,6 +11,9 @@
     "export-ts": "cargo run --manifest-path src-tauri/Cargo.toml -- export-ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@fluentui/react-components": "^9.66.7",
     "@js-temporal/polyfill": "^0.5.1",
     "@lexical/code": "^0.33.1",
