成立 cell  group 表格功能

--- a/databox/Cargo.toml
+++ b/databox/Cargo.toml
@@ -8,3 +8,5 @@ axum = "0.8.4"
 tokio = "1.46.1"
 arrow = { workspace = true }
 duckdb = { workspace = true }
+parquet = { workspace = true }
+headers = "0.4.1"
